regular check in

--- a/scratch1.ipynb
+++ b/scratch1.ipynb
@@ -90,6 +90,60 @@
    "execution_count": 13
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-14T02:45:28.570149Z",
+     "start_time": "2025-02-14T02:45:28.566335Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "temp=predictions[0]['scores']>0.5\n",
+    "print(predictions[0]['boxes'][temp])"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1199.1351,  494.8308, 2576.0000, 1789.4996],\n",
+      "        [1342.3115,  169.9173, 1765.6598,  473.2567],\n",
+      "        [1072.7588,  721.3292, 1271.8386,  894.9664],\n",
+      "        [1165.7117,  496.4180, 1400.5007,  737.2252]], device='cuda:0',\n",
+      "       grad_fn=<IndexBackward0>)\n"
+     ]
+    }
+   ],
+   "execution_count": 39
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-14T02:39:50.470405Z",
+     "start_time": "2025-02-14T02:39:50.467026Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "predictions[0]['boxes'][predictions[0]['scores']>0.5]\n",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1199.1351,  494.8308, 2576.0000, 1789.4996],\n",
+       "        [1342.3115,  169.9173, 1765.6598,  473.2567],\n",
+       "        [1072.7588,  721.3292, 1271.8386,  894.9664],\n",
+       "        [1165.7117,  496.4180, 1400.5007,  737.2252]], device='cuda:0',\n",
+       "       grad_fn=<IndexBackward0>)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 27
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
