seems to work for all images now. Nowo see quality oface detection.

--- a/scratch1.ipynb
+++ b/scratch1.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-16T03:22:36.867734Z",
-     "start_time": "2025-02-16T03:22:35.110005Z"
+     "end_time": "2025-02-16T18:03:09.206937Z",
+     "start_time": "2025-02-16T18:03:09.202655Z"
     }
    },
    "source": [
@@ -15,6 +15,7 @@
     "from PIL import Image, ExifTags\n",
     "import torchvision.transforms.functional as F\n",
     "import matplotlib.pyplot as plt\n",
+    "from torchvision.io import decode_image\n",
     "\n",
     "\n",
     "plt.rcParams[\"savefig.bbox\"] = 'tight'\n",
@@ -31,14 +32,14 @@
     "        axs[0, i].set(xticklabels=[], yticklabels=[], xticks=[], yticks=[])"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-16T03:22:37.419402Z",
-     "start_time": "2025-02-16T03:22:36.873239Z"
+     "end_time": "2025-02-16T18:03:12.250845Z",
+     "start_time": "2025-02-16T18:03:11.929387Z"
     }
    },
    "source": [
@@ -46,40 +47,29 @@
     "model=retinanet_resnet50_fpn_v2(weights=RetinaNet_ResNet50_FPN_V2_Weights.DEFAULT).to(device)\n",
     "preprocess=RetinaNet_ResNet50_FPN_V2_Weights.DEFAULT.transforms().to(device)\n",
     "model.eval()\n",
-    "image=img=Image.open('/run/media/amol447/54B63A3EB63A2142/Abha_mobile_backup/IMG_4900.PNG')\n"
+    "image=img=decode_image('/run/media/amol447/54B63A3EB63A2142/Abha_mobile_backup/IMG_0010.PNG',mode='RGB')\n"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-13T03:17:02.575302Z",
-     "start_time": "2025-02-13T03:17:02.541700Z"
+     "end_time": "2025-02-16T16:55:56.014341Z",
+     "start_time": "2025-02-16T16:55:56.012808Z"
     }
    },
    "cell_type": "code",
    "source": "",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 6
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-16T03:23:06.022200Z",
-     "start_time": "2025-02-16T03:23:05.748083Z"
+     "end_time": "2025-02-16T18:03:15.662965Z",
+     "start_time": "2025-02-16T18:03:15.437504Z"
     }
    },
    "source": [
@@ -88,7 +78,7 @@
     "    predictions=model([img_processed])\n"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 8
   },
   {
    "metadata": {
